<resources>
    <string name="app_name">HackIDC2021</string>
    <string name="title1">ביטוח ישיר</string>
    <string name="event_report">דיווח על אירוע ביטוחי</string>
    <string name="connect_title">כניסה</string>
    <string name="pass_title">סיסמא</string>
    <string name="use_title">שם משתמש</string>
    <string name="forget_title">שכחת את הסיסמא?</string>
    <string name="connect_order_title">התחבר</string>
    <string name="a">דיווח אירוע ביטוחי - רכב</string>
    <string name="b">כדי לקצר את תהליך הדיווח, אנא אשרו את הפרטים הבאים:</string>
    <string name="c">ערוך</string>
    <string name="d">דגם:</string>
    <string name="e">שם פרטי:</string>
    <string name="f">מספר פוליסה:</string>
    <string name="g">שם משפחה:</string>
    <string name="h">תעודת זהות:</string>
    <string name="i">כתובת:</string>
    <string name="j">אשר</string>
    <string name="k">ערוך</string>
    <string name="l">XXX</string>
    <string name="m">פרטי רכב</string>
    <string name="n">XXX</string>
    <string name="o">XXX</string>
    <string name="p">XX</string>
    <string name="q">מספר רכב:</string>
    <string name="r">XXX</string>
    <string name="s">פרטים אישיים</string>
    <string name="t">גיל:</string>
    <string name="u">XXX</string>
    <string name="v">שנה:</string>
    <string name="w">האם קיים ביטוח נהג יחיד:</string>
    <string name="x">XXX</string>
    <string name="y">XXX</string>
    <string name="z">XXX</string>
    <string name="aa">XXX</string>
    <string name="ab">אשר</string>
    <string name="ac">כדי לקצר את תהליך הדיווח, אנא אשרו את הפרטים הבאים</string>
    <string name="ad">דגם</string>
    <string name="ae">TODO</string>
    <string name="aj">j</string>
    <string name="hi">שלום</string>
    <string name="med_in">ביטוח רפואי</string>
    <string name="quest">עבור איזה ביטוח ברצונך להעלות דיווח?</string>
    <string name="car_in">ביטוח רכב</string>
    <string name="apart_in">ביטוח דירה</string>
    <string name="name_name">fff</string>
    <string name="imim">to</string>
    <string name="amam">tofo</string>
    <string name="nn" />
    <string name="mm" />
    <string name="pic_tp">צילום מסמכים - תעודה וביטוח צד ג</string>
    <string name="files">XXX</string>
    <string name="pic_uplo">צילום והעלאת מסמכים</string>
    <string name="filefile">קבצים שהועלו עד כה:</string>
    <string name="cside">העלה או צלם מסמכי צד ג</string>
    <string name="takeapicofthecar">צילום הרכב</string>
    <string name="instruct">העלה תמונות או צלם את הפגיעה ברכב</string>
    <string name="uploadedfiles">קבצים שהועלו עד כה:</string>
    <string name="inputiii">XXX</string>
    <string name="ndjb">TODO</string>
    <string name="gapr">TODO</string>
    <string name="fun">TODO</string>
    <string name="joy">TODO</string>
    <string name="fky">nothing</string>
    <string name="hello">discription</string>
    <string name="hil">hil</string>
</resources>