<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8EBEF"
    tools:context=".personal_details">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/a"
        android:textColor="#C32020"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/ac"
        android:textColor="#1A2E9C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/ae"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/par" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/e"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="160dp"
        android:text="@string/g"
        android:textColor="#5E5656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/h"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="260dp"
        android:layout_marginRight="260dp"
        android:text="@string/t"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/i"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="56dp"
        android:text="@string/j"
        android:textColor="#FAF1F1"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="56dp"
        android:text="@string/k"
        android:textColor="#F6F0F0"
        android:textStyle="bold"
        app:backgroundTint="#FFC107"
        app:iconTint="#F8F5F5"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#BD2121" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="697dp"
        android:text="@string/s"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/private_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/r"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="160dp"
        android:text="@string/l"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="201dp"
        android:layout_marginLeft="201dp"
        android:layout_marginTop="210dp"
        android:text="@string/u"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="210dp"
        android:text="@string/p"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:text="@string/o"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:layout_marginBottom="148dp"
        android:text="@string/aa"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="358dp"
        android:layout_height="276dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/aj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/par" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="4dp"
        android:text="@string/c"
        android:textColor="#FDF6F6"
        android:textStyle="bold"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#FFC107" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ab"
        android:textColor="#FDF4F4"
        app:backgroundTint="#8BC34A"
        app:iconTint="#EDE4E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/w"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/q"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="364dp"
        android:text="@string/m"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="196dp"
        android:layout_marginRight="196dp"
        android:text="@string/f"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:text="@string/v"
        android:textColor="#5E5656"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="504dp"
        android:text="@string/ad"
        android:textColor="#5E5656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/car_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="@string/n"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/policy_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="444dp"
        android:text="@string/x"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="116dp"
        android:text="@string/y"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="116dp"
        android:text="@string/z"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>