<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8EBEF"
    tools:context=".take_a_picture">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/pic_uplo"
        android:textColor="#DC1414"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:contentDescription="@string/fky"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/par" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="166dp"
        android:adjustViewBounds="true"
        android:background="#D1E4E4"
        android:contentDescription="@string/gapr"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/camera_2185357_1280" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/takeapicofthecar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="37dp"
        android:text="@string/instruct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/uploadedfiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/inputiii"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:contentDescription="@string/joy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/par" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:text="@string/pic_tp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:text="@string/cside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:text="@string/filefile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginBottom="91dp"
        android:text="@string/files"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="65dp"
        android:layout_height="53dp"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="161dp"
        android:adjustViewBounds="true"
        android:background="#D1E4E4"
        android:contentDescription="@string/fun"
        android:cropToPadding="true"
        android:onClick="PhotoGetter"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upp" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="101dp"
        android:layout_height="60dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"

        android:layout_marginBottom="168dp"
        android:adjustViewBounds="true"
        android:background="#D1E4E4"
        android:contentDescription="@string/gapr"
        android:onClick="TakePhoto"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/camera_2185357_1280" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="61dp"
        android:layout_height="63dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginBottom="168dp"
        android:adjustViewBounds="true"
        android:background="#D1E4E4"
        android:contentDescription="@string/ndjb"
        android:cropToPadding="true"
        android:onClick="PhotoGetter"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/upp" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="79dp"
        android:layout_height="71dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"

        android:background="#D1E4E4"
        android:contentDescription="@string/hil"
        android:onClick="TakePhoto"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera_2185357_1280" />

</androidx.constraintlayout.widget.ConstraintLayout>